--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Tuoi: 21</p>
     <p>Nghe nghiep: Student</p>
     <p>So Thich:  </p>
+    <h3>Avatar</h3>
+    <img width="100px" src="him.jpg" alt="">
     
 </body>
 </html>
