--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <p>Nghe nghiep: Student</p>
     <p>So Thich:  </p>
     <h3>Avatar</h3>
-    <img width="100px" src="him.jpg" alt="">
-    
+    <img width="100px" src="./image/him.jpg" alt="">
 </body>
 </html>
