--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>So Thich:  </p>
     <h3>Avatar</h3>
     <img width="100px" src="./image/him.jpg" alt="">
+    <a href="htpp://facebook.com/">Myfb</a>
 </body>
 </html>
