--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h3>profile info</h3>
-    <p>Ten: <mark> Le Thi Huyen </mark></p>
-    <p>Tuoi: 21</p>
-    <p>Nghe nghiep: Student</p>
-    <p>So Thich:  </p>
-    <h3>Avatar</h3>
-    <img width="100px" src="./image/him.jpg" alt="">
-    <a href="htpp://facebook.com/">Myfb</a>
-</body>
-</html>
+this is html file
